[Cairo] Anti-aliasing should not be always disabled for lines https://bugs.webkit.org/show_bug.cgi?id=109535

Patch by Viatcheslav Ostapenko <viatchslav.o@samsung.com> on 2013-05-03
Reviewed by Martin Robinson.

Source/WebCore:

Don't disable antialiasing for text lines because it produces ugly picture if
page is scaled.

Test: fast/css3-text/css3-text-decoration/text-decoration-line-scaled.html

* platform/graphics/cairo/GraphicsContextCairo.cpp:
(WebCore::drawLineOnCairoContext):

LayoutTests:

Add pixel test with scaled text lines.

* fast/css3-text/css3-text-decoration/text-decoration-line-scaled.html: Added.
* platform/efl/fast/css3-text/css3-text-decoration/text-decoration-line-scaled-expected.png: Added.
* platform/efl/fast/css3-text/css3-text-decoration/text-decoration-line-scaled-expected.txt: Added.

Canonical link: https://commits.webkit.org/134005@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149540 268f45cc-cd09-0410-ab3c-d52691b4dbfc